--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="cloudiness">Cloudiness</string>
+    <string name="rain">Rain</string>
 </resources>
