added new icons and changed application name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Weather</string>
+    <string name="app_name">Minimal Weather</string>
     <string name="cloudiness">Cloudiness</string>
     <string name="rain">Rain</string>
     <string name="fmi_disclaimer">Data provided by the Finnish Meteorological Institute</string>
